# GDC

./: CMakeLists.txt  about.md  mod.json
.github/workflows/: build.yml
.xwin-cache/dl/: manifest_17.json
.xwin-cache/unpack/Win11SDK_10.0.26100_headers.msi/: tree.txt
.xwin-cache/unpack/Win11SDK_10.0.26100_libs_x86_64.msi/: tree.txt
.xwin-cache/unpack/Win11SDK_10.0.26100_store_headers.msi/: tree.txt
.xwin-cache/unpack/Win11SDK_10.0.26100_store_headers_onecoreuap.msi/: tree.txt
.xwin-cache/unpack/Win11SDK_10.0.26100_store_libs.msi/: tree.txt
.xwin-cache/unpack/Win11SDK_10.0.26100_uap_headers.msi/: tree.txt
include/: AgentManager.hpp  NEAT.hpp  NeatHUD.hpp
src/: AgentManager.cpp  main.cpp
